# GongXun

./: .gitignore  CMakeLists.txt  LinuxSerial.cc  detect.hpp  detectQR.hpp  main.cc  my_serial.cc  my_v4l2.h  task1.cc  task2.cc
